// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Meeting Control component snapshot matches with active icon button 1`] = `
<ContextTransform(Button)
  ariaLabel="Mute"
  circle={true}
  color="red"
  disabled={false}
  onClick={[Function]}
  size={56}
>
  <Icon
    append={false}
    ariaLabel={null}
    buttonClassName=""
    buttonProps={null}
    className=""
    color=""
    description=""
    name="microphone_28"
    onClick={null}
    prepend={false}
    size={null}
    sizeOverride={false}
    style={null}
    title=""
    type=""
  />
</ContextTransform(Button)>
`;

exports[`Webex Meeting Control component snapshot matches with disabled icon button 1`] = `
<ContextTransform(Button)
  ariaLabel="Mute disabled"
  circle={true}
  color=""
  disabled={true}
  onClick={[Function]}
  size={56}
>
  <Icon
    append={false}
    ariaLabel={null}
    buttonClassName=""
    buttonProps={null}
    className=""
    color=""
    description=""
    name="microphone_28"
    onClick={null}
    prepend={false}
    size={null}
    sizeOverride={false}
    style={null}
    title=""
    type=""
  />
</ContextTransform(Button)>
`;

exports[`Webex Meeting Control component snapshot matches with disabled text button 1`] = `
<ContextTransform(Button)
  ariaLabel="Join meeting disabled"
  color="green"
  disabled={true}
  onClick={[Function]}
  size={52}
>
  Join meeting
</ContextTransform(Button)>
`;

exports[`Webex Meeting Control component snapshot matches with inactive icon button 1`] = `
<ContextTransform(Button)
  ariaLabel="Unmute"
  circle={true}
  color=""
  disabled={false}
  onClick={[Function]}
  size={56}
>
  <Icon
    append={false}
    ariaLabel={null}
    buttonClassName=""
    buttonProps={null}
    className=""
    color=""
    description=""
    name="microphone-mute_28"
    onClick={null}
    prepend={false}
    size={null}
    sizeOverride={false}
    style={null}
    title=""
    type=""
  />
</ContextTransform(Button)>
`;

exports[`Webex Meeting Control component snapshot matches with text button 1`] = `
<ContextTransform(Button)
  ariaLabel="Join meeting"
  color="green"
  disabled={false}
  onClick={[Function]}
  size={52}
>
  Join meeting
</ContextTransform(Button)>
`;
